K8S/Api-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: housepriceapi-deployment
  labels:
    app: houseprice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: houseprice
  template:
    metadata:
      labels:
        app: houseprice
    spec:
      containers:
      - name: housepriceapi
        image: latest
